[tool.poetry]
name = "quickbio-user-guide"
version = "0.1.0"
description = "Quickbio user guide"
authors = ["Italo Buitron"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.33"
mkdocs-static-i18n = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
